# gps-playground

./: .gitignore  LICENSE  README.md
.west/: config
gps-playground/: CMakeLists.txt  prj.conf  west.yml
gps-playground/src/: main.c
